docs: document the CI plugin's settings and customization (#719)
The CI plugin documented two of its roughly thirty setting keys, and the prose
claimed "tons of optional sbt settings that users can modify" without saying
what any of them were. Everything else had to be read out of the source.

Adds a settings reference covering all of them, grouped by what they affect,
with types and defaults. Adds guides for the parts that are hard to discover:

  * customizing jobs, both by mapping over the generated ones and by building
    them from the exported steps - including the reminder that
    `ciPullRequestApprovalJobs` references job ids and has to be kept in step
  * job timeouts, and why `timeoutMinutes` is deprecated but still honoured
  * concurrency, including an expression-valued `cancelInProgress` so pull
    request runs cancel while releases do not
  * service containers, and why `options` matters for health checks
  * replacing the workflow environment, and why a build might need to
  * `ciCheckGithubWorkflow`, which is what keeps the committed YAML honest

Also corrects what was already there. The documented default test matrix said
Java 11, 17 and 21; it has been 17, 21 and 25 since #630. The sample YAML pinned
actions/setup-java v3.13.0 and v3.10.0, neither of which the plugin emits, and
which disagreed with each other. The job list omitted everything after
update-readme, including the `ci` job that branch protection is meant to point
at.

Documents that the plugin auto-triggers and that its settings are ThisBuild
scoped, and that the ADT types are not exported through autoImport so they need
importing explicitly - both of which cost time to work out from scratch.

README.md regenerated.

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>